Fix edit purchase modal footer alignment

--- a/css/style.css
+++ b/css/style.css
@@ -3692,7 +3692,8 @@ body[data-page="site-detail"] #itemDialog #itemNumberInput.is-shaking {
   }
 }
 
-body[data-page="site-detail"] #itemDialog .input-group--item-create .input-char-counter {
+body[data-page="site-detail"] #itemDialog .input-group--item-create .input-char-counter,
+body[data-page="site-detail"] #editPurchaseModal .input-group--item-create .input-char-counter {
   width: auto;
   text-align: right;
   margin-top: 0;
@@ -3703,7 +3704,8 @@ body[data-page="site-detail"] #itemDialog .input-group--item-create .input-char-
   opacity: 1;
 }
 
-body[data-page="site-detail"] #itemDialog .item-input-feedback-row {
+body[data-page="site-detail"] #itemDialog .item-input-feedback-row,
+body[data-page="site-detail"] #editPurchaseModal .item-input-feedback-row {
   width: 100%;
   margin-top: 0.24rem;
   display: flex;
@@ -3712,7 +3714,8 @@ body[data-page="site-detail"] #itemDialog .item-input-feedback-row {
   gap: 0.5rem;
 }
 
-body[data-page="site-detail"] #itemDialog #itemFormError {
+body[data-page="site-detail"] #itemDialog #itemFormError,
+body[data-page="site-detail"] #editPurchaseModal #editPurchaseFormError {
   width: auto;
   margin-top: 0;
   text-align: left;
